# health-mon

./: CMakeLists.txt  README.md
include/health/: types.hpp
include/health/manager/: health_manager.hpp
include/health/voter/: tmr_voter.hpp
include/health/watchdog/: watchdog.hpp
tests/: test_health.cpp
